feat: create pagination component

--- a/src/i18n/de/translations.json
+++ b/src/i18n/de/translations.json
@@ -1,5 +1,9 @@
 {
   "translation": {
+    "buttons": {
+      "prev": "Zurück",
+      "next": "Weiter"
+    },
     "title": "FINDEN SIE IHRE IMMOBILIE IN ÖSTERREICH"
   }
 }
