--- a/src/i18n/en/translations.json
+++ b/src/i18n/en/translations.json
@@ -1,5 +1,9 @@
 {
   "translation": {
+    "buttons": {
+      "prev": "Prev",
+      "next": "Next"
+    },
     "title": "FIND YOUR PROPERTY IN AUSTRIA"
   }
 }
