--- a/src/i18n/ua/translations.json
+++ b/src/i18n/ua/translations.json
@@ -1,5 +1,9 @@
 {
   "translation": {
+    "buttons": {
+      "prev": "Назад",
+      "next": "Вперед"
+    },
     "title": "ЗНАЙДІТЬ СВОЮ НЕРУХОМІСТЬ В АВСТРІЇ"
   }
 }
