--- a/src/i18n/ua/translations.json
+++ b/src/i18n/ua/translations.json
@@ -2,7 +2,47 @@
   "translation": {
     "buttons": {
       "prev": "Назад",
-      "next": "Вперед"
+      "next": "Вперед",
+      "sign-in": "Увійти",
+      "logout": "Вийти",
+      "place-advertisement": "Розмістити оголошення"
+    },
+    "real-estate": {
+      "type": {
+        "apartment": "Квартира"
+      },
+      "operations": {
+        "buy": "Купити",
+        "sell": "Продати",
+        "rent": "Оренда",
+        "rent-out": "Орендувати"
+      },
+      "rooms": "Кімнати",
+      "bathroom": "Ванні кімнати"
+    },
+    "services": {
+      "buy": {
+        "title": "Купити",
+        "descriptions": "Навіть якщо ви не знайомі з ринком нерухомості та його місцевими особливостями, ви можете знайти тут потрібну нерухомість і впевнено та грамотно інвестувати."
+      },
+      "sell": {
+        "title": "Продати",
+        "descriptions": "Незалежно від того, який шлях ви виберете для продажу свого майна, fylpi допоможе вам орієнтуватися в процесі та приведе вас до успішної угоди з нерухомістю."
+      },
+      "rent": {
+        "title": "Оренда",
+        "descriptions": "Скористайтеся зручним онлайн-пошуком і знайдіть потрібну нерухомість у нашій повній базі даних."
+      },
+      "rent-out": {
+        "title": "Орендувати",
+        "descriptions": "Охоплюйте більше потенційних орендарів і ефективно керуйте процесом оренди за допомогою наших простих у користуванні інструментів і ресурсів."
+      }
+    },
+    "home": {
+      "operations": {
+        "main-title": "ЗНАЙДИ СВОЄ БАЖАННЯ НЕРУХОМІСТЬ ІНВЕСТИРУЙ ГРАМОТНО",
+        "descriptions": "Fylpi - це ваш надійний партнер, який впевнено та професійно проведе вас через джунглі ринку нерухомості до вашої успішної угоди з нерухомістю."
+      }
     },
     "title": "ЗНАЙДІТЬ СВОЮ НЕРУХОМІСТЬ В АВСТРІЇ"
   }
