--- a/src/i18n/ua/translations.json
+++ b/src/i18n/ua/translations.json
@@ -9,7 +9,8 @@
     },
     "real-estate": {
       "type": {
-        "apartment": "Квартира"
+        "apartment": "Квартира",
+        "house": "Дім"
       },
       "operations": {
         "buy": "Купити",
@@ -42,6 +43,10 @@
       "operations": {
         "main-title": "ЗНАЙДИ СВОЄ БАЖАННЯ НЕРУХОМІСТЬ ІНВЕСТИРУЙ ГРАМОТНО",
         "descriptions": "Fylpi - це ваш надійний партнер, який впевнено та професійно проведе вас через джунглі ринку нерухомості до вашої успішної угоди з нерухомістю."
+      },
+      "top-ads": {
+        "main-title": "ТОП ОГОЛОШЕНЬ",
+        "descriptions": "Відкрийте для себе наші найкращі пропозиції! Різноманітність об’єктів нерухомості — від розкішних вілл до комерційних об’єктів, сучасних міських квартир та інвестиційних об’єктів."
       }
     },
     "title": "ЗНАЙДІТЬ СВОЮ НЕРУХОМІСТЬ В АВСТРІЇ"
