--- a/src/i18n/ua/translations.json
+++ b/src/i18n/ua/translations.json
@@ -47,6 +47,62 @@
       "top-ads": {
         "main-title": "ТОП ОГОЛОШЕНЬ",
         "descriptions": "Відкрийте для себе наші найкращі пропозиції! Різноманітність об’єктів нерухомості — від розкішних вілл до комерційних об’єктів, сучасних міських квартир та інвестиційних об’єктів."
+      },
+      "popular": {
+        "main-title": "Популярне",
+        "filters": {
+          "buy": {
+            "residential-real-estate": "Житлова нерухомість",
+            "apt-buildings": "Багатоквартирні будинки",
+            "investment-obj": "Об'єкти інвестування",
+            "commercial-real-estate": "Комерційна нерухомість",
+            "other": "Інше"
+          },
+          "rent": {
+            "houses": "Будинки",
+            "apt": "Квартири",
+            "commercial-real-estate": "Комерційна нерухомість",
+            "other": "Інше"
+          }
+        }
+      },
+      "faq": {
+        "main-title": "Часті запитання",
+        "descriptions": "Маєте запитання? У нас є відповіді. Відкрийте для себе відповіді на поширені запитання в нашому обширному розділі поширених запитань, де ви знайдете всю необхідну інформацію.",
+        "how-buy-property": {
+          "question": "Як я можу купити нерухомість?",
+          "answer": "Щоб продати свою нерухомість, вам, як правило, знадобляться діючий витяг із земельної книги, енергетичний сертифікат, плани будівлі та поверхові плани, а також, якщо необхідно, договори оренди та докази проведених ремонтних робіт. Ці документи допомагають зробити процес продажу безперебійним. Отже, ви добре підготовлені."
+        },
+        "documents-need-to-sell-property": {
+          "question": "Які документи мені потрібні для продажу майна?",
+          "answer": "При продажі вашої нерухомості вам знадобиться кілька важливих документів. Один із ключових документів – це витяг з реєстру нерухомості, який підтверджує ваше право власності. Крім того, енергетичний сертифікат є обов’язковим за законом, оскільки він містить інформацію про енергоефективність будівлі. Якщо у вас є будівельні плани та поверхові схеми, їх також варто підготувати, оскільки вони допоможуть потенційним покупцям краще зрозуміти структуру об’єкта.\n\nЯкщо ви проводили ремонт чи модернізацію, бажано мати документи, що підтверджують виконані роботи. Якщо нерухомість здається в оренду, вам знадобляться договір оренди та звіт про комунальні витрати.\n\nЩоб переконатися, що у вас є всі необхідні документи, рекомендується заздалегідь проконсультуватися з відповідними органами або рієлтором."
+        },
+        "how-find-best-rental-offers": {
+          "question": "Як знайти найкращі пропозиції оренди поблизу?",
+          "answer": "Щоб знайти найкращі пропозиції оренди у вашому районі, існує кілька ефективних способів. Один із найпростіших – це використання онлайн-платформ з нерухомістю, де ви можете фільтрувати оголошення за ціною, розміром і зручностями. Популярні сервіси включають OLX, DOM.RIA та ЛУН.\n\nТакож варто звернутися до місцевих рієлторів, оскільки вони часто мають ексклюзивні пропозиції, яких немає в інтернеті. Перегляд оголошень у місцевих газетах або звернення уваги на вивіски \"Здається в оренду\" у вашому районі також можуть допомогти знайти вигідні варіанти.\n\nЩе один ефективний спосіб – перевіряти соціальні мережі або місцеві групи у Facebook, де часто публікуються оголошення про оренду. Крім того, можна самостійно розмістити оголошення, вказавши бажані параметри житла.\n\nЯкщо ви хочете швидко знайти квартиру, рекомендується регулярно перевіряти нові оголошення та оперативно зв’язуватися з власниками для організації перегляду."
+        },
+        "costs-associated-property": {
+          "question": "Які витрати пов'язані з купівлею нерухомості?",
+          "answer": "Під час купівлі нерухомості, крім вартості самого об’єкта, покупці повинні враховувати й додаткові витрати. Однією з найбільших статей витрат є податок на передачу нерухомості, який залежно від регіону становить від 3,5% до 6,5% від вартості покупки. Також необхідно сплатити нотаріальні та реєстраційні збори, які зазвичай складають 1,5% – 2% від загальної суми.\n\nЯкщо угода оформлюється через рієлтора, може знадобитися сплата комісії агенту, яка зазвичай коливається від 3% до 7% від вартості нерухомості. Додатково варто врахувати можливі витрати на ремонт, модернізацію або переїзд.\n\nКредитування нерухомості також може мати додаткові банківські збори або штрафи за дострокове погашення. Після покупки необхідно регулярно сплачувати податок на нерухомість, страхування та витрати на утримання.\n\nРекомендується заздалегідь розрахувати всі витрати та, за потреби, звернутися за консультацією до фінансового експерта або рієлтора, щоб забезпечити правильне планування бюджету."
+        },
+        "how-arrange-viewing-appointment": {
+          "question": "Як я можу домовитися про перегляд?",
+          "answer": "Є кілька способів записатися на перегляд нерухомості. Найчастіше можна зв’язатися з продавцем або орендодавцем через сайт нерухомості, де було розміщено оголошення. Багато онлайн-платформ пропонують контактну форму або прямий номер телефону власника чи рієлтора.\n\nЯкщо об'єкт здається або продається через рієлтора, ви можете зв’язатися з ним телефоном або електронною поштою, щоб узгодити зручний час перегляду. Рекомендується пропонувати кілька варіантів часу, щоб підвищити шанси на швидку домовленість.\n\nЯкщо ви знайшли нерухомість у газеті або на вивісці \"Продається\" чи \"Здається в оренду\", варто подзвонити власнику напряму або навіть завітати за адресою, щоб дізнатися про можливий перегляд.\n\nПеред переглядом рекомендується підготувати список важливих питань щодо нерухомості. Якщо ви шукаєте житло для оренди, варто заздалегідь підготувати необхідні документи, такі як заява орендаря, довідка про доходи або кредитний звіт, що може підвищити ваші шанси на позитивне рішення."
+        }
+      }
+    },
+    "footer": {
+      "links": {
+        "about-us": "Про нас",
+        "contact-us": "Зв'яжіться з нами",
+        "my-account": "Мій рахунок",
+        "buy": "Kупити",
+        "rent": "Оренда",
+        "faq": "Часті запитання",
+        "service-property": "Обслуговування навколо помешкання",
+        "practical-instr": "Практичні вказівки",
+        "knowledge-property": "Про майно",
+        "advisory-services": "Консультаційні послуги"
       }
     },
     "title": "ЗНАЙДІТЬ СВОЮ НЕРУХОМІСТЬ В АВСТРІЇ"
